web-app/web-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  labels:
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - name: web-app
        image: web-app:2.0
        ports:
        - containerPort: 8000
        imagePullPolicy: Never
        #args: ["npm", "run", "start", "--", "--host", "0.0.0.0"]
        args: ["uvicorn", "app:app", "--host", "0.0.0.0"]
