web-app/web-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: web-app
